# Adame

./: .gitignore  .pylintrc  Adame.code-workspace  CreatePackage.script  GitVersion.yml  InstallDevelopmentDependencies.script  License.txt  ReadMe.md  Setup.py  package.json  requirements.txt
.well-known/: security.txt
Adame/: .coveragerc  .gitignore  Adame.codeunit  Adame.codeunit.xml  Adame.py  AdameCore.py  Core.py  ReadMe.md  ScriptCollection.codeunit  Setup.py  core.py  pyproject.toml  requirements.txt  setup.cfg
Adame/Adame/: Adame.py
Adame/AdameTests/: EnvironmentForTest.py  test_Adame.py
Adame/Other/: .gitignore  CommonTasks.py  Hints.md
Adame/Other/QualityCheck/: Linting.py
Adame/Other/QualityCheck/TestCoverage/: TestCoverage.xml
Adame/Other/Reference/: docfx.json
Adame/Other/Reference/ReferenceContent/: GeneratedFiles.md  index.md
Adame/Other/Reference/ReferenceContent/Articles/: Configuration.md  Usage.md
Adame/Other/Reference/ReferenceContent/Examples/NewRepository/: ReadMe.md
Adame/Other/Reference/ReferenceContent/Examples/NewRepository/Configuration/: Adame.configuration  FileMetadata.csv  RunningInformation.txt  docker-compose.yml
Adame/Other/Reference/ReferenceContent/Examples/NewRepository/Configuration/Security/: Security.configuration
Adame/Other/Reference/ReferenceContent/articles/: Usage.md  index.md  toc.yml
Adame/Other/Resources/TestCoverageHistory/: 2023-08-14_15-50-55_CoverageHistory.xml  2023-08-18_10-59-31_CoverageHistory.xml  2023-10-01_10-52-10_CoverageHistory.xml  2023-10-01_11-40-39_CoverageHistory.xml  2023-10-01_21-56-41_CoverageHistory.xml  2023-10-01_22-45-53_CoverageHistory.xml  2023-10-02_20-20-20_CoverageHistory.xml  2023-10-22_22-34-01_CoverageHistory.xml  2023-12-18_23-48-57_CoverageHistory.xml  2024-02-16_14-27-44_CoverageHistory.xml  2024-10-22_11-15-22_CoverageHistory.xml  2024-11-14_18-13-55_CoverageHistory.xml  2025-02-16_16-38-19_CoverageHistory.xml  2025-05-18_22-16-49_CoverageHistory.xml  2025-05-18_22-42-29_CoverageHistory.xml  2025-05-18_22-59-33_CoverageHistory.xml  2025-05-18_23-21-40_CoverageHistory.xml  2025-05-18_23-47-22_CoverageHistory.xml  2025-05-19_00-08-30_CoverageHistory.xml  2025-05-19_00-24-58_CoverageHistory.xml  2025-05-19_09-49-12_CoverageHistory.xml  2025-05-19_10-12-05_CoverageHistory.xml  2025-05-19_10-37-14_CoverageHistory.xml  2025-05-19_14-06-40_CoverageHistory.xml  2025-05-24_21-57-54_CoverageHistory.xml  2025-05-24_23-22-41_CoverageHistory.xml  2025-08-16_13-04-03_CoverageHistory.xml  2025-09-28_13-53-11_CoverageHistory.xml  2025-09-29_08-50-54_CoverageHistory.xml
Adame/Reference/: Configuration.md  Index.md
Adame/Reference/Examples/NewRepository/Configuration/: .gitconfig  Adame.configuration
Adame/Tests/: EnvironmentForTest.py  test_Adame.py  test_AdameCore.py
Other/Metrics/: LinesOfCode.csv
Other/Reference/: Reference.md
Other/Resources/Changelog/: v1.2.32.md  v1.2.34.md  v1.2.51.md  v1.2.52.md  v1.2.54.md
Other/Resources/Support/: InformationAboutSupportedVersions.csv
Reference/: configuration.md  generatedfiles.md  index.md  usage.md
Reference/Examples/NewRepository/: .gitignore  License.txt
Reference/Examples/NewRepository/Configuration/: .gitconfig  (+2 more)
Reference/Scripts/: InstallDevelopmentDependencies.script  RunTestcases.script
Tests/: tests.py
documentation/: somemoredoc.md
src/: CreatePackage.script  Setup.py
src/Adame/: core.py
src/AdameTests/: tests.py
src/adame/: adame.py  core.py
src/adameTests/: tests.py
src/adame_test/: adame_test.py
(+1 files in other folders)
