[metadata]
name = Adame
version = 1.2.54
author = Marius Göcke
author_email = marius.goecke@gmail.com
description = Adame is a tool to manage docker-applications as part in a Linux-environment.
long_description = file:ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/anionDev/Adame
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows :: Windows 10
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Terminals
    Topic :: Utilities
keywords = release build management

[options]
packages = Adame
zip_safe = False
include_package_data = False
python_requires = >=3.10
install_requires =
    psutil>=7.0.0
    PyYAML>=6.0.2
    ScriptCollection>=3.5.74

[options.packages.find]
exclude = AdameTests

[options.entry_points]
console_scripts =
    adame = Adame.Adame:adame_cli
